# astral

./: .gitignore  .gitmodules  1  1.iss  LICENSE  LICENSE_EN  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  keystore.txt  pubspec.yaml  wfpstate.xml
.github/workflows/: Android.yml  Android_all.yml  Stop All Workflows  android-build-all.yaml  android-build-arm64.yaml  android-build-armv7.yaml  android-build-x86.yaml  android-build-x86_64.yaml  android-main.yaml  android-setup.yaml  dart.yml  ethicalcheck.yml  ios-build.yaml  linux-build.yaml  mac-build.yaml  win.yml  windows-build-Setup-cmd.yml  windows-build-Setup.yml  windows-build.yml
android/: build.gradle.kts
android/app/: build.gradle.kts
config/: app_config.hive
integration_test/: simple_test.dart
lib/: app.dart  main.dart  代办
lib/config/: app_config.dart  cof.dart  navigationconfiguration.dart  themeconfiguration.dart  windowconfiguration.dart  导航配置.dart  窗口配置.dart
lib/fun/: e_d_room.dart  error_dialog.dart  net_astral_udp.dart  random_name.dart  reg.dart  room_utils.dart  route_fun.dart  show_add_room_dialog.dart  show_edit_room_dialog.dart  show_server_dialog.dart  sorting_jump_dialog.dart  up.dart
lib/k/: navigtion.dart
lib/model/: config_model.dart  config_model.g.dart
lib/screens/: Home.dart  about.dart  chat_page.dart  front.dart  home_page.dart  kvroom.dart  logs_page.dart  main_screen.dart  room_page.dart  route_page.dart  server_page.dart  settings.dart  settings_page.dart  tool_page.dart  user_list_page.dart  user_page.dart  wfp_page.dart  wfp_page.dart1  主屏幕.dart  房间.dart  设置.dart  首页.dart
lib/services/: encryption_service.dart  node_discovery_service.dart  websocket_test_server.dart
lib/sys/: config_core.dart  k_stare.dart
lib/utils/: app_info.dart  cs.json  firewall_controller.dart  kv_state.dart  logger.dart  network_util.dart  ping_util.dart  runin.dart  runin.g.dart  serverjs.dart  up.dart  主题工具.dart  状态.dart
lib/wid/: all_user_card.dart  bottom_nav.dart  canvas_jump.dart  home_box.dart  left_nav.dart  mini_user_card.dart  public_servers_dialog.dart  room_card.dart  room_reorder_sheet.dart  room_settings_sheet.dart  room_tags_selector.dart  server_card.dart  server_reorder_sheet.dart  status_bar.dart  theme_selector.dart  windows_controls.dart
lib/widgets/: card.dart  window_control_buttons.dart  主题选择器.dart  卡片.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
rust/: Cargo.toml  wfp_state.txt  wfpstate.xml
rust/.cargo/: config.toml
rust/easytier/: Cargo.toml
rust/easytier/kcp-sys-main/: Cargo.toml  README.md  build.rs
rust/easytier/kcp-sys-main/.github/workflows/: rust.yml
rust/easytier/kcp-sys-main/examples/: udp_client.rs  udp_server.rs
rust/easytier/kcp-sys-main/src/: endpoint.rs  error.rs  ffi_safe.rs  lib.rs  packet_def.rs  state.rs  stream.rs
rust/easytier/src/: launcher.rs
rust/easytier/src/common/: constants.rs
rust/easytier/src/peers/: peer_ospf_route.rs
rust/src/: frb_generated.rs
rust/src/api/: astral_wfp.rs  d.c  firewall.rs  hops.rs  kudp.rs  mod.rs  nt.rs  nt.rs1  simple.rs  wfp.rs  zr.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_astral.podspec  rust_lib_fltier.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_astral.podspec  rust_lib_fltier.podspec
rust_builder/windows/: CMakeLists.txt
test/: websocket_test.dart
vpn_service_plugin/: README.md  pubspec.yaml
vpn_service_plugin/android/: build.gradle  settings.gradle
vpn_service_plugin/example/: README.md  pubspec.yaml
vpn_service_plugin/lib/: vpn_service_plugin.dart  vpn_service_plugin_method_channel.dart  vpn_service_plugin_platform_interface.dart
web/: index.html
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  (+1 more)
复制/: kl.toml
(+79 files in other folders)
