[package]
name = "rust_lib_fltier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
lazy_static =  "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19.0"
dashmap = "6.1.0"
chrono = "0.4.38"
humansize = "1.1.1"
tokio = "1.39.2"
anyhow = "1.0.95"
easytier = { path = "./easytier" }
# 修正 winapi 的特性，移除 windows crate 的特性
windows = { version = "0.48", features = ["Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_Foundation", "Win32_System_WindowsProgramming"] }
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

