[package]
name = "rust_lib_astral"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
lazy_static =  "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19.0"
dashmap = "6.1.0"
chrono = "0.4.38"
humansize = "1.1.1"
tokio = "1.39.2"
anyhow = "1.0.95"
surge-ping = "0.8"
easytier = { path = "./easytier" }
winapi = { version = "0.3", features = ["iphlpapi", "iptypes", "netioapi", "winerror", "ws2def"] }
rand = "0.9.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
