[package]
name = "rust_lib_astral"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.10.0"
lazy_static =  "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19.0"
dashmap = "6.1.0"
chrono = "0.4.41"
humansize = "1.1.1"
tokio = "1.39.2"
anyhow = "1.0.95"
surge-ping = "0.8"
easytier = { path = "./easytier" }
# easytier = { git = "https://github.com/ldoubil/EasyTier", branch = "main" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_System_Com", 
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Memory",
    "Win32_System_WindowsProgramming",
    "Win32_Foundation",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_Rpc"
] }
widestring = { version = "1.0.2", default-features = false, features = ["alloc"] }
winapi = { version = "0.3.9", features = [
    "iphlpapi", 
    "winerror", 
    "errhandlingapi", 
    "minwindef", 
    "ws2def", 
    "iptypes",
    "ipifcons",
    "heapapi",
    "processthreadsapi",
        "fileapi",
    "winnt",
    "handleapi",
    "winbase",
    "ntdef"
] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_System_Rpc"
] }
rand = "0.9.1"

[target.'cfg(not(target_os = "android"))'.dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
